Multiple improvements - Updates README.md - More css fixes   - Toolbar buttons to be vertically centered   - Toolbar buttons to hide text on 975px and below   - Comment header not to wrap on mobile   - Versions content table to keep max width

--- a/internal/resources/static/css/comments.css
+++ b/internal/resources/static/css/comments.css
@@ -142,10 +142,6 @@
         padding: 0.8rem;
     }
 
-    .comment-header {
-        flex-wrap: wrap;
-    }
-
     .comment-date {
         width: 100%;
         margin-top: 0.3rem;
